--- a/kafka_server/Dockerfile
+++ b/kafka_server/Dockerfile
@@ -4,4 +4,4 @@ RUN ["apt", "update"]
 RUN ["apt", "install", "-y", "default-jre"]
 VOLUME ["/opt/kafka"]
 WORKDIR "/opt/kafka"
-CMD ["bin/kafka-server-start.sh", "config/server.properties", "--override", "zookeeper.connect=zoo:2181"]
+CMD ["bin/kafka-server-start.sh", "config/server.properties"]
