--- a/zookeeper/Dockerfile
+++ b/zookeeper/Dockerfile
@@ -3,5 +3,6 @@ FROM debian:stable
 RUN ["apt", "update"]
 RUN ["apt", "install", "-y", "default-jre"]
 VOLUME ["/opt/kafka"]
+VOLUME ["/opt/zookeeper"]
 WORKDIR "/opt/kafka"
 CMD ["bin/zookeeper-server-start.sh", "config/zookeeper.properties"]
