--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - "$PWD/kafka_distr:/opt/kafka"
       - "$PWD/zookeeper/data/zoo1:/opt/zookeeper"
+    hostname: zoo1
     networks:
       - kafka-lab
   zoo2:
@@ -16,6 +17,7 @@ services:
     volumes:
       - "$PWD/kafka_distr:/opt/kafka"
       - "$PWD/zookeeper/data/zoo2:/opt/zookeeper"
+    hostname: zoo2
     networks:
       - kafka-lab
   zoo3:
@@ -25,6 +27,7 @@ services:
     volumes:
       - "$PWD/kafka_distr:/opt/kafka"
       - "$PWD/zookeeper/data/zoo3:/opt/zookeeper"
+    hostname: zoo3
     networks:
       - kafka-lab
 
@@ -37,6 +40,7 @@ services:
       - zoo1
       - zoo2
       - zoo3
+    hostname: kafka1
     networks:
       - kafka-lab
     environment:
@@ -51,6 +55,7 @@ services:
       - zoo1
       - zoo2
       - zoo3
+    hostname: kafka2
     networks:
       - kafka-lab
     environment:
@@ -65,6 +70,7 @@ services:
       - zoo1
       - zoo2
       - zoo3
+    hostname: kafka3
     networks:
       - kafka-lab
     environment:
